--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,16 @@
 	<html>
 		<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Grandma's Recipes</title>
 		<style>
 		
 		</style>
 		</head>
 	<body>
-	
+	<h1>Grandma Anna's recipes</h1>
+	<h2>A recipes collection from my grandmother</h2>
+	<p>This website was created in order to share recipes from a long tradition within my family from Italy.<br>
+	There are recipes from the poor times and some historic ones from 1900!</p>
 	</body>
 
 	</html>
