--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 		<head>
 		<meta charset="utf-8">
 		<title>Grandma's Recipes</title>
+		<style>
+		
+		h1 {
+		font-size: 16px;
+		}
+		
+		h2 {
+		font-size: 14px;
+		}
+		
+		body {
+		font-size: 12px;
+		}
+		
+		</style>
 		</head>
 	<body>
 	<h1>Grandma Anna's recipes</h1>
