--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h1>Grandma Anna's recipes</h1>
 	<h2>A recipes collection from my grandmother</h2>
 	<p>This website was created in order to share recipes from a long tradition within my family from Italy.<br>
-	There are recipes from the poor times and some historic ones from 1900!</p>
+	There are recipes from the poor times and some historic ones from 1900, all passed down from Grandmother to granddaughter!</p>
 	</body>
 
 	</html>
