--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		font-size: 15px;
 		}
 		
+		#Menu {
+		position: fixed left;
+		}
 		</style>
 		</head>
 	<body>
@@ -24,6 +27,12 @@
 	<h2>A recipes collection from my grandmother</h2>
 	<p>This website was created in order to share recipes from a long tradition within my family from Italy.<br>
 	There are recipes from the poor times and some historic ones from 1900, all passed down from Grandmother to granddaughter!</p>
+	<div id="Menu">
+	Starters<br>
+	Main course <br>
+	Second course <br>
+	Desserts
+	</div>
 	</body>
 
 	</html>
