--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		}
 		
 		#Menu {
-		position: fixed left;
+		position: fixed;
+		float: left;
+		margin-left: solid 2px grey;
 		}
 		</style>
 		</head>
