--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 		#Menu {
 		position: fixed;
-		float: left;
+		float: right;
 		margin-left: solid 2px grey;
 		}
 		</style>
@@ -29,6 +29,7 @@
 	<h2>A recipes collection from my grandmother</h2>
 	<p>This website was created in order to share recipes from a long tradition within my family from Italy.<br>
 	There are recipes from the poor times and some historic ones from 1900, all passed down from Grandmother to granddaughter!</p>
+	
 	<div id="Menu">
 	Starters<br>
 	Main course <br>
