--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 		}
 		
 		#Menu {
-		position: fixed;
-		float: right;
-		margin-left: solid 2px grey;
+		background-color: red;
 		}
 		</style>
 		</head>
